# stock-fundamental-analysis-agent

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.claude/: settings.json
.claude/rules/: code-style.md  testing.md
.codex/: hooks.json
.github/: pull_request_template.md
app/: Dockerfile  config.py  db.py  main.py  models.py
app/agents/: adaptive_router.py  analyst_team_graph.py  filings_rag_graph.py  ingestion_graph.py  news_sentiment_graph.py  ratio_analysis_graph.py  report_critic_graph.py  report_writer_graph.py  supervisor_graph.py  valuation_graph.py
app/agents/tools/: filings_rag_tool.py  financial_data.py  vector_search.py  web_search.py
app/components/: retriever.py
app/core/: lifespan.py
app/observability/: cost_tracker.py  feedback.py  tracer.py
app/prompts/: registry.py  templates.py
app/routers/: core.py  streaming.py
app/security/: input_guard.py  output_filter.py
app/services/: conversation.py  guardrails.py  rag_pipeline.py  ratio_engine.py  sector_benchmarks.py  semantic_cache.py  valuation.py  xbrl_cache.py
app/services/filings/: chunker.py  downloader.py  ingest.py  retriever.py
app/services/financial_sources/: __init__.py  edgartools_source.py  sec_edgar_source.py  yfinance_source.py
docs/: critic_loop_quality.md
frontend/: Dockerfile  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/src/: App.tsx  theme.ts
frontend/src/components/: ChatWindow.tsx  FeedbackButtons.tsx  InputBar.tsx  MessageBubble.tsx  RatiosCard.tsx  ReportCard.tsx  Sidebar.tsx  SourceCitations.tsx  StatusBanner.tsx  TickerForm.tsx
frontend/src/hooks/: useAnalysisStream.ts  useChat.ts  useFeedback.ts
frontend/src/services/: api.test.ts  api.ts
frontend/src/types/: index.ts
graphify-out/: .graphify_labels.json  .graphify_python  .graphify_root  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
graphify-out/2026-07-15/: graph.json
graphify-out/cache/: stat-index.json
scripts/: evaluate_critic_loop.py  evaluate_filings_rag.py  seed.py  verify_analyst_team.py
tests/: conftest.py  test_cache.py  test_db.py  test_instruction_docs.py  test_main.py  test_models.py  test_retrieval.py  test_routing.py
tests/agents/: test_analyst_team_graph.py  test_filings_rag_graph.py  test_ingestion_graph.py  test_news_sentiment_graph.py  test_ratio_analysis_graph.py  test_report_critic_graph.py  test_report_writer_graph.py  test_supervisor_graph.py  test_valuation_graph.py
tests/agents/tools/: test_filings_rag_tool.py  test_web_search.py
tests/components/: test_retriever.py
tests/core/: test_lifespan.py
tests/fixtures/: filings_qa.json  financials.py
tests/observability/: test_tracer.py
tests/routers/: test_streaming.py
tests/services/: test_guardrails.py  test_ratio_engine.py  test_sector_benchmarks.py  test_valuation.py  test_xbrl_cache.py
tests/services/filings/: test_chunker.py  test_downloader.py  test_ingest.py  test_retriever.py
tests/services/financial_sources/: test_edgartools_source.py  test_sec_edgar_source.py  test_yfinance_source.py
