[project]
name = "stock-fundamental-analyser"
version = "0.0.1"
description = "Multi-agent stock fundamental analysis agent"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic-settings>=2.5.0",
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "openai>=1.50.0",
    "weaviate-client>=4.9",
    "tavily-python>=0.5.0",
    "yfinance>=0.2.40",
    "edgartools>=3.0",
    "httpx>=0.27.0",
    "langsmith>=0.9.0",
    "langchain-text-splitters>=1.1.2",
    "langchain-voyageai>=0.4.0",
    "voyageai>=0.4.1",
    "tenacity>=9.1.0",
    "langgraph-checkpoint-postgres>=3.1.0",
    "psycopg[binary,pool]>=3.3.4",
    "presidio-analyzer>=2.2.363",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.0",
    "mypy>=1.11.0",
    "pre-commit>=3.8.0",
]
# ragas==0.4.3 transitively imports langchain_community.chat_models.vertexai, which no
# longer exists in any langchain-community release compatible with this project's already-
# resolved langchain>=1.0 (verified: pinning langchain-community to an old pre-1.0 release
# to keep that shim creates an unsatisfiable resolver conflict against langchain-text-
# splitters/langgraph/langchain-openai already used elsewhere). Fixed instead with a small
# sys.modules stub in scripts/evaluate_filings_rag.py before importing ragas -- we never use
# VertexAI, so a stub is enough. Quarantined here (not in main deps) since this never runs in
# `make check`/CI and costs real money.
eval = [
    "ragas==0.4.3",
    "langchain-community",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
